--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="twelve columns"> 
           <ul class="nav-menu">
     
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="configurator.html">Konfigurator</a></li>
             <li><a href="samplepage.html">Sample</a></li>
           </ul>
