--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <hr>
     <div class="row">
     <div class="twelve columns">
-    <img src="img/porsche-model.png" alt="Porsche 911 GT3 " class="hero-image">
+    <img src="img/porsche-model.png" alt="Porsche 911 GT3 " class="hero-image" loading="lazy">
   </div>
 </div>
 
